# s32z2-rust-demo

./: .gitignore  Cargo.toml  README.md  build.rs  criticalup.toml  rust-toolchain.toml  s32z2.x
.cargo/: config.toml
src/: clocks.rs  lib.rs  mpu.rs
t32-scripts/: s32z27_connect_r52_rtu0.cmm  s32z27_disable_watchdog.cmm  s32z27_init_rtu0_sram.cmm  start-common.cmm  start-s32z270dc-rtu0.cmm
